# MMR-Bench

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
data/: README.md
scripts/: make_toy_data.py  prepare_hf_mmr_bench.py
src/mmrbench/: __main__.py  cli.py  config.py  eval.py  run.py
src/mmrbench/data/: __init__.py  mllm_data.py
src/mmrbench/embedding/: __init__.py  embedding.py
src/mmrbench/routers/: __init__.py  _shared.py  cmr.py  eval_compat.py  kmeans.py  kmeansnew.py  knn.py  linear.py  linear_mf.py  mlp.py  mlp_mf.py  oracle.py  random.py
